tests/typing/pass/array/array_update.act
contract A

constructor()

creates

  uint[3] x := [1, 2, 3]
  int[3][2][3] y := [
                      [ [0,0,0], [0,0,0] ],
                      [ [0,0,0], [0,0,0] ],
                      [ [0,0,0], [0,0,0] ]
                    ]

transition f()

iff
  y[1][0] == [1,2,3]

storage

  y[0] := [ [1,2,3], [4,5,6] ]
  y[1][0] := [7,8,9]

ensures

  pre(y)[1][0][0] != post(y)[1][0][0]
