tests/typing/fail/array/out_of_bounds_postupdate.act
contract A

constructor()

creates

  uint[3] ar := [1,2,3]
  uint x := 4

transition f()

storage
  x := 10
  ar[1] := 5

ensures
  post(ar[post(x)]) == 5

